## next
[all] added maintenance mode (-Dmaintenance=none,none)
[all] fixes for index regeneration (pre-production tests)
[api] REST API changed; need to adjust web gui!

## 1.67 (not yet deployed)
[update] added pending auth support for route(6) creation
[update] added dry-run support for a single object update via the 'dry-run: reason' pseudo-attribute
[update] display diff instead of original object in update notifications
[query] added svn-style diff support option '--diff-versions n:m'
[all] added JMX call for online regeneration of index tables
[all] dropped fallbacks in failed index lookup; need to regenerate indexes on deployment!

## 1.66.3 (deployed on 2013-06-05)
[query] --all-sources now correctly returns results from RIPE + (all GRS except RIPE-GRS)

## 1.66.2
[update] added validation for incoming email addresses
[api] moved api doc root from / to /api-doc

## 1.66
[nrtm] added nrtm client to allow users run a local copy of the RIPE DB
[query] fix bug that resulted in 'no results found' when -K or -b were used

## 1.65.10
[query] Change "--no-taginfo" to "--no-tag-info" and "--show-taginfo" to "--show-tag-info"
[grs] Tag resources for sources with {SOURCE}-REGISTRY-RESOURCE and {SOURCE}-USER-RESOURCE

## 1.65.9
[wsearch] Improve log file indexing
[update] Do not fail unreferenced object cleanup on invalid object in history
[grs] Interpret sources correctly when loading authoritative resource data

## 1.65.8
[query] Make sources to dummify configurable
[query] --resource added for global authoritative internet resources

## 1.65.3
[wsearch] Improve import logging

## 1.65.2
[grs] Fix JPIRR GRS import

## 1.65.1
[query] Fix response object type order

## 1.65
[update] Add syntax check before calling dnscheck
[wsearch] Separate domain part of email addresses to make it searchable
[wsearch] Handle ipv6 addresses with prefix length correctly
[rest api] Report tags at object level (rather than global)
[rest api] Stream search query results