@@ -2,6 +2,7 @@
 [all] added maintenance mode (-Dmaintenance=none,none)
 [all] fixes for index regeneration (pre-production tests)
 [api] REST API changed; need to adjust web gui!
+[query] All GRS sources are now filtered on AuthoritativeResource regardless off --resource flag
 
 ## 1.67 (not yet deployed)
 [update] added pending auth support for route(6) creation
